--- a/style.css
+++ b/style.css
@@ -1,16 +1,39 @@
+@import url('https://fonts.googleapis.com/css2?family=Orbitron&display=swap');
+
+* {
+  box-sizing: border-box;
+}
+
 body {
-  font-family: 'Anonymous Pro';
+  font-family: 'Orbitron', sans-serif;
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: #010c10;
+  margin: 0;
+  padding: 0;
+  border: 0;
 }
 
 .clock {
   color: #44d7f2;
+  width: 60rem;
   font-size: 5rem;
+  text-align: center;
   border: 3px solid #44d7f2;
   padding: 3rem 7rem;
   box-shadow: 10px 10px 10px #44d7f2, -10px -10px 10px #44d7f2;
+}
+
+.country {
+  background-color: #010c10;
+  font-size: 1rem;
+  color: #fff;
+  border: 1px solid #44d7f2;
+  padding: 0.5rem 1rem;
+  position: absolute;
+  top: 1.5%;
+  right: 1.5%;
+  border-radius: 1px;
 }
