Fix: relocation kakao ad

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
   font-family: 'Orbitron', sans-serif;
   height: 100vh;
   display: flex;
+  flex-flow: column nowrap;
   justify-content: center;
   align-items: center;
   background-color: #010c10;
@@ -36,4 +37,9 @@ body {
   top: 1.5%;
   right: 1.5%;
   border-radius: 1px;
+}
+
+.kakao_ad {
+  position: absolute;
+  bottom: 0;
 }
